--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-    <title>Recipe Book</title>
+    <title>Your title</title>
 
     <style>
       body {
-        background: wheat;
+        background: #333;
         margin: 0;
       }
 
@@ -27,48 +27,27 @@
 <body>
     <div class="container">
 
-      <h1>Recipe Book</h1>
-      <p>by Free Geek</p>
+      <h1>Title</h1>
+      <p>ByLine</p>
 
-      <!-- Original: http://foodnetwork.sndimg.com/content/dam/images/food/fullset/2011/6/10/0/EA1111H_gazpacho_s4x3.jpg -->
-      <!-- Short, HTTP only: http://refresher.co/gazpacho.jpg -->
-      <img src="https://github.com/Free-Geek/HTML-CSS/raw/master/gazpacho.jpg" alt="Image of my favorite recipe: Gazpacho!" />
 
-      <h2>My Famous Gazpacho Recipe</h2>
+      <h2>Subheading</h2>
 
-      <p>This is my world famous Gazpacho recipe. It's really easy, delicious, and healthy. Plus it's a great way to cool off in the summer. Put it in tiny glasses and serve them as appitizers at parties!</p>
+      <p>Paragraphs are fun. This one is a demo.</p>
 
-      <h3>Ingredients:</h3>
+      <h3>Smaller heading</h3>
       <ul>
-          <li>6 plum tomatoes</li>
-          <li>2 cucumbers</li>
-          <li>2 cloves garlic</li>
-          <li>1 lime</li>
-          <li>1/2 white onion</li>
-          <li>1/3 cup virgin olive oil</li>
-          <li>fresh basil</li>
-          <li>sea salt</li>
-          <li>freshly ground pepper</li>
+          <li>list item</li>
+          <li>List item 2</li>
+          <li>List item 3</li>
+      
       </ul>
 
-      <h3>Directions:</h3>
-      <ol>
-          <li>Roughly chop tomatoes, cucumbers, and onions. Dice garlic. Dump vegetables and olive oil into a blender.</li>
-          <li>Cut lime in half and squeeze juice into the blender.</li>
-          <li>Add a couple leaves of basil and some salt and pepper into the blender.</li>
-          <li>Use the chop setting of your blender to blend the mixture into a chunky yet soupy consistency.</li>
-          <li>Add more salt and pepper to taste.</li>
-          <li>Refrigerate for at least 6 hours, though preferably overnight.</li>
-          <li>Serve cold. It's great with a sprinkle of parmesian, a splash of hot sauce, or a side of crusty bread. Make sure it's hot outside first though!</li>
-      </ol>
 
       <h2>Links</h2>
       <ul>
           <li><a href="https://www.github.com">GitHub</a></li>
-          <li><a href="https://www.codecademy.com">Codecademy</a></li>
-          <li><a href="https://www.freecodecamp.com">Free Code Camp</a></li>
-          <li><a href="https://www.learnhowtoprogram.com/courses">Learn How To Program</a></li>
-          <li><a href="http://flukeout.github.io/">CSS Diner</a></li>
+
       </ul>
 
     </div>
