--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <style>
       body {
-        background: #333;
+        background: #fff;
         margin: 0;
         border-radius: 10%;
       }
@@ -16,6 +16,9 @@
         width: 100%;
         border-radius: 8px;
       }
+       .center {
+        text-align: center;   
+      }
 
     
         
@@ -23,7 +26,7 @@
 </head>
 
 <body>
-    <div>
+    <div class="center">
 
       <h1>Title</h1>
       <p>ByLine</p>
