--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
       }
       .typeface {
          color: #000; 
-         font-size: 100px; 
+         font-size: 20px;
+         font-family: Verdana, Helvetica, sans-serif;
+
       }
 
     
@@ -42,12 +44,7 @@
       <p>Paragraphs are fun. This one is a demo.</p>
 
       <h3>Smaller heading</h3>
-      <ul>
-          <li>list item</li>
-          <li>List item 2</li>
-          <li>List item 3</li>
-      
-      </ul>
+
 
 
       <h2>Links</h2>
