--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 <body>
     <div class="typeface">
         <h1>Title</h1>
-        <p>By Me</p>
+        <h6>By Me</h6>
         
-        <h5>Wow, this is some text</h5>
+        <p>Wow, this is some text</p>
         <a href="https://wikipedia.org">and a link</a>
         
         <div class="center">
