--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <title>Your title</title>
+    <link rel="icon" href="catlin.png">
+</head>
 
     <style>
       body {
@@ -32,7 +34,6 @@
     
         
     </style>
-</head>
 
 <body>
     <div class="typeface">
