--- a/index.html
+++ b/index.html
@@ -48,11 +48,44 @@ body, html {
   <div class="text">
     <h1 style="font-size:50px">My Website</h1>
     <p>By Me</p>
-    <button onclick="window.location.href = 'https://kazmal.tech/utils/';" class="button">Click me</button><br><br>
+    <button onclick="window.location.href = 'https://www.youtube.com/watch?v=dQw4w9WgXcQ';" class="button">Click me</button><br><br>
   </div>
 </div>
-
+<div style="padding-left:40px">
 <p>This is most likley an article which will go on and on.</p>
+<div style="padding-left:50px">
+    
+    <p>
+    <div style="padding-left:60px">
+       Autological and word are both aurological words.
+       <hr></div>
 
+        <div style="padding-left:70px">
+       Autological and word are both aurological words.
+       <hr></div>
+
+            <div style="padding-left:80px">
+                       Autological and word are both aurological words.
+                       <hr></div>
+
+
+                <div style="padding-left:90px">
+                           Autological and word are both aurological words.
+                           <hr></div>
+
+
+                    <div style="padding-left:100px">
+                                Autological and word are both aurological words.
+                                <hr></div>
+
+
+                        <div style="padding-left:110px">
+                                   Autological and word are both aurological 
+                                   words.
+<hr></div>
+
+<div style="padding-left:45px"> Now that you understand how to make this, the next step is something like <a href="https://cgmsp.github.io/template">this</a>
+                            </p>
+                
 </body>
 </html>
