--- a/index.html
+++ b/index.html
@@ -1,91 +1,51 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Your Title</title>
-    <link rel="icon" href="catlin.png"></link>
-<style>
-body, html {
-  height: 100%;
-  margin: 0;
-  font-family: Verdana, Helvetica, sans-serif;
-
-}
-
-
-.top {
-  background-color: #333;
-  height: 50%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-}
-
-.text {
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
-}
-
-
-.button {
-  border-radius: 8px;
-  background-color: #999;
-}
-
-.button:hover {
-  border-radius: 8px;
-  background-color: #fff;
-}
-</style>
-</head>
+<div class="font">
+  <div class="centered">
+  <head>
+  </head>
 <body>
 
-<div class="top">
-  <div class="text">
-    <h1 style="font-size:50px">My Website</h1>
-    <p>By Me</p>
-    <button onclick="window.location.href = 'https://www.youtube.com/watch?v=dQw4w9WgXcQ';" class="button">Click me</button><br><br>
-  </div>
+  <h1 style="font-size:50px">My Website</h1>
+  <p>By Me</p>
+<hr>
+<p>This is an image of me!</p>
+    <img src="https://avatars0.githubusercontent.com/u/49257206?s=460&v=4" alt="Me!" />
 </div>
-<div style="padding-left:40px">
-<p>This is most likley an article which will go on and on.</p>
-<div style="padding-left:50px">
-    
-    <p>
-    <div style="padding-left:60px">
-       Autological and word are both aurological words.
-       <hr></div>
+<hr>
 
-        <div style="padding-left:70px">
-       Autological and word are both aurological words.
-       <hr></div>
+    <h3>About Me</h3>
+      <ul>
+        <li>I am this</li>
+        <li>I am that</li>
+        <li>I am good at this</li>
+        <li>But not that</li>
 
-            <div style="padding-left:80px">
-                       Autological and word are both aurological words.
-                       <hr></div>
+      </ul>
+
+      <h3>Contact Me</h3>
+      <ul>
+        <li><a href="https://www.github.com/kazmalhotra">GitHub: KazMalhotra</a></li>
+
+        <li><a href="mailto:malhotrak@catlin.edu">Email: malhotrak@catlin.edu</a></li>
+
+      </ul>
+</div>
+<hr>
+
+<style>
+.font{
+  font-family: "Sans Serif";
+}
+
+.centered{
+  text-align: center
+
+}
+
+</style>
 
 
-                <div style="padding-left:90px">
-                           Autological and word are both aurological words.
-                           <hr></div>
-
-
-                    <div style="padding-left:100px">
-                                Autological and word are both aurological words.
-                                <hr></div>
-
-
-                        <div style="padding-left:110px">
-                                   Autological and word are both aurological 
-                                   words.
-<hr></div>
-
-<div style="padding-left:45px"> Now that you understand how to make this, the next step is something like <a href="https://cgmsp.github.io/template">this</a>
-                            </p>
-                
 </body>
+
 </html>
